<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubscriptionActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/subscription"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="125dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/cname"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="175dp"
        android:background="@drawable/white_border"
        android:gravity="center"
        android:maxLines="1"
        android:text="AbsAksdlKAREEM"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text="@string/salary"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/csalary"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="290dp"
        android:background="@drawable/white_border"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/Nine_million"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="370dp"
        android:text="@string/start_date"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="20dp"
        android:text="@string/end_date"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/edcontract"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/white_border"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/_1_1_2022"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/sdcontract"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/white_border"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/_1_9_2022"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>