<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:id="@+id/lolo"
    tools:context=".ContractFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contract"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="120dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cname"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_border"
            android:text="ABDALKAREEM"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="italic"
            android:maxLines="1"
            android:paddingStart="3dp"
            android:paddingTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="45dp"
            android:text="@string/salary"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/csalary"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:background="@drawable/white_border"
            android:text="@string/Nine_million"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:text="@string/start_date"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cname"
           />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="20dp"
            android:text="@string/end_date"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/csalary"
        />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:background="@drawable/white_border"
            android:text="@string/_1_1_2022"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            android:paddingStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/white_border"
            android:text="@string/_1_9_2022"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            android:maxLines="1"
            android:paddingStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>